--- a/portafolio.html
+++ b/portafolio.html
@@ -15,7 +15,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header --> 
     <header class="header-parallax">
         <div class="header-content text-white text-center py-12">
             <!-- Botón Modo Oscuro -->
@@ -25,7 +25,7 @@
           
             <div class="flex items-center justify-center space-x-3">
                 <h1 class="text-5xl font-bold"><span>Juan David Roncancio</span></h1> 
-                <img src="images/perfil.jpeg"  alt="Foto de perfil de Juan David Roncancio" class="w-40 h-40 rounded object-cover">   
+                <img src="images/perfil.jpeg"  alt="Foto de perfil de Juan David Roncancio" width="150">    
             </div>
             <h2 class="text-2xl mt-3">Ingeniero de Software</h2>
             <a href="index.html" target="_blank" class="text-blue-400 transition-colors duration-300"><i class="fab fa-volver al CV mr-2"></i>><i class="fas fa-arrow-left mr-2"></i>Volver al CV</a> 
@@ -99,6 +99,8 @@
     </main>
 
 
+
+
     <!-- Footer -->
     <footer class="bg-blue-900 text-white text-center py-6">
         <div class="flex flex-col items-center space-y-3">
@@ -127,13 +129,7 @@
     <script src="js/scripts.js"></script>
 </body>
 </html> 
-  
- 
 
 
 
 
-
-
-
- 
